output/dev/llvm/intmethod.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: /Users/cmk/Developer/cworkspace/compiler/hw3/Lexer/output/dev/llvm/intmethod.llvm:13:7: error: value doesn't match function result type 'i32'
  ret void
      ^
